
5.2a4 -> 5.2b1:
    - proyvind: cpuinfo: change name of '%_prefer_buildarchs' macro to '%_prefer_target_cpu'.
    - proyvind: cpuinfo: change delimiter for %_prefer_buildarchs from ':' to ' '.
    - jbj: js: add AutoFu to build --with-js=internal.
    - jbj: ruby: fix: global interpreter with contained object refcnts needs
	early cleanup in rpmcliFini(), not in rpmioClean().
    - proyvind: cpuinfo: allow to enable from configure again since it's usable
	now. (although still room for improvements...)
    - jbj: ruby: stub-in the minimal necessary AutoFu to attempt ruby bindings.
    - jbj: add AutoFu to detect fallocate(2) and posix_fallocate(3).
    - jbj: js: add rpmMCExpand() for per-context macro expansion.
    - jbj: yarn: convert rpmdbMatchIterator to usage mutex with refcounts.
    - jbj: js: fix: global interpreter with contained object refcnts needs
	early cleanup in rpmcliFini(), not in rpmioClean().
    - jbj: rpmio: re-enable the memory leak warning with included explanation.
    - jbj: js: stub-in a rpmts class.
    - jbj: js: start js module for RPM objects.
    - jbj: js: wire up the File class.
    - jbj: js: replace NSPR with rpmio in the File class.
    - jbj: js: stub in the File class before ripping NSPR (SpiderMonkey).
    - jbj: js: add toy uuid.{generate,describe} object and methods.
    - jbj: js: add version/options/load methods (SpiderMonkey).
    - jbj: js: add an "environment" object (SpiderMonkey).
    - jbj: js: add a "arguments" array (SpiderMonkey).
    - jbj: js: add a print method (swiped from SpiderMonkey js shell).
    - rse: RPM_VENDOR_OPENPKG: stick with local RPM sanity checking for reasonable warning messages
    - jbj: js: simplify the embedding to the JSAPI examples, not the js shell.
    - jbj: ficl: capture stdout from ficl vm.
    - jbj: ficl: wire-up %post -p <ficl>.
    - jbj: ficl: wire-up %{ficl:...}. capturing stdout todo++ ...
    - jbj: ficl: add a FICL interpreter wrapper.